--- a/texmf/bibtex/bib/biblatex-jacow/jacow-sample.bib
+++ b/texmf/bibtex/bib/biblatex-jacow/jacow-sample.bib
@@ -1,8 +1,8 @@
 @inproceedings{klaproth:ipac2022-mopopt018,
   author       = {S. Klaproth and H. De Gersem and A. Penirschke and T. Reichert and R. Singh},
   title        = {{Advancing to a GHz Transition Radiation Monitor for Longitudinal Charge Distribution Measurements}},
-  booktitle    = {Proc. IPAC'22},
-% booktitle    = {Proc. 13th International Particle Accelerator Conference (IPAC'22)},
+  booktitle    = {Proc. 13th Int. Part. Accel. Conf. (IPAC'22)},
+  booktitle+an:short = {="Awesome Proc. IPAC'22"},
   pages        = {267--270},
   eid          = {MOPOPT018},
   language     = {english},
@@ -15,7 +15,7 @@
   year         = {2022},
   issn         = {2673-5490},
   isbn         = {978-3-95450-227-1},
-  doi          = {doi:10.18429/JACoW-IPAC2022-MOPOPT018},
+  doi          = {10.18429/JACoW-IPAC2022-MOPOPT018},
   url          = {https://jacow.org/ipac2022/papers/mopopt018.pdf},
   abstract     = {{In the past, longitudinal beam profiles have been measured with e.g., Feschenko monitors*, Fast Faraday Cups (FFC)** and field monitors. Feschenko monitors usually examine an average shape over several pulses and FFCs are interceptive devices by design. In this work we want to present the progress in the development of a novel GHz diffraction radiation monitor which shall be able to measure the longitudinal charge distribution of single bunches within Hadron beam LINACS non-destructively. A proof-of-concept measurement has been performed at GSI. We aim for a resolution of 50 to 100ps at beam energies of β=0.05 to 0.74. electronic field simulations were performed using CST Particle Studio to determine an optimal RF-Window, which also suits as vacuum chamber and the beam energy and angular dependencies of the diffraction radiation for different materials were analyzed.}},
 }
@@ -26,6 +26,7 @@
 % author       = {Y. Funakoshi and others},
   title        = {{The SuperKEKB Has Broken the World Record of the Luminosity}},
   booktitle    = {Proc. IPAC'22},
+  eventdate    = {2022-07-12/2022-07-17},
 % booktitle    = {Proc. 13th International Particle Accelerator Conference (IPAC'22)},
   pages        = {1--5},
   eid          = {MOPLXGD1},
@@ -39,7 +40,7 @@
   year         = {2022},
   issn         = {2673-5490},
   isbn         = {978-3-95450-227-1},
-  doi          = {https://doi.org/10.18429/JACoW-IPAC2022-MOPLXGD1},
+  doi          = {10.18429/JACoW-IPAC2022-MOPLXGD1},
   url          = {https://jacow.org/ipac2022/papers/moplxgd1.pdf},
   abstract     = {{The SuperKEKB broke the world record of the luminosity in June 2020 in the Phase 3 operation. The luminosity has been increasing since then and the present highest luminosity is 4.65 x 10³⁴ cm⁻²s⁻¹ with β_{y}^{*} of 1 mm. The increase of the luminosity was brought with an application of crab waist, by increasing beam currents and by other improvements in the specific luminosity. In this paper, we describe what we have achieved and what we are struggling with. Finally, we mention a future plan briefly.}},
 }
@@ -51,7 +52,7 @@
   eid          = {MOIYGD2},
   eventdate    = {2022-07-12/2022-07-17},
   language     = {english},
-  type         = {atevent},
+  type         = {unpublished, loser!},
   venue        = {Bangkok, Thailand},
   abstract     = {{Usually large energy spread and shot-to-shot stability are the bottlenecks of laser accelerator in applications. Recently proton beam with energies less than 10 MeV, <1\% energy spread, several to tens of pC charge can be stably produced and transported in Compact LAser Plasma Accelerator (CLAPA) at Peking University. The CLAPA beam line is an object-image point analysing system, which ensures the transmission efficiency and energy selection accuracy for proton beams with initial large divergence angle and energy spread. A spread-out Bragg peak (SOBP) is produced with high precision beam control, which is essential for cancer therapy. Other primary application experiments based on laser-accelerated proton beam have also been carried out, such as FLASH irradiation, Laser Ion trace probe, proton radiograph, stress testing for tungsten, irradiation of semiconductor sensor to simulate the space irradiation environment and so on.}},
 }
@@ -73,8 +74,8 @@
 @unpublished{cook:ipac2022-mopopt067,
   author       = {N.M. Cook and G. Andonian and A. Diaw and C.C. Hall and N.P. Norvell and M. Yadav},
   title        = {{Electron Beam Phase Space Reconstruction From a Gas Sheet Diagnostic}},
-  eventtitle   = {IPAC'22},
-  type         = {thisevent},
+  eventtitle   = {the  aIPAC’22},
+  type         = {this conference, thank you},
 % booktitle    = {Proc. 13th International Particle Accelerator Conference (IPAC'22)},
   pages        = {414--417},
   eid          = {MOPOPT067},
@@ -118,13 +119,14 @@
 @article{PhysRevSTAB.17.112801,
   title = {Beam position monitor design for a third generation light source},
   author = {Chen, Zhichu and Leng, Yongbin and Ye, Kairong and Zhao, Guobi and Yuan, Renxian},
-  journal = {Phys. Rev. ST Accel. Beams},
+  journaltitle = {Physical Review Special Topic --- Accelerators and Beams},
+  shortjournal = {Phys. Rev. ST Accel. Beams},
   volume = {17},
   issue = {11},
   pages = {112801},
   numpages = {8},
   year = {2014},
-  month = {Nov},
+  month = {11},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevSTAB.17.112801},
   url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.17.112801}
@@ -139,22 +141,24 @@
   pages = {112803},
   numpages = {7},
   year = {2014},
-  month = {Nov},
+  month = {11},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevSTAB.17.112803},
   url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.17.112803}
 }
 
-@submittedto{chen:arxiv:1309.2353,
+@unpublished{chen:arxiv:1309.2353,
   title = {Experimental Study using {Touschek} Lifetime as Machine Status Flag in {SSRF}},
   author = {Zhichu Chen and Yongbin Leng and Renxian Yuan and Yingbing Yan and Luyang Yu},
   journal = {Chinese Physics C},
-  doi = {https://doi.org/10.48550/arXiv.1309.2353},
+  type = {to be published},
+  doi = {10.48550/arXiv.1309.2353},
 }
 
-@submitted{author:fake-paper,
+@unpublished{author:fake-paper,
   title = {Fake paper wrote by the six {Author} brothers},
   author = {First Author and Second Author and Third Author and Fourth Author and Fifth Author and Sixth Author},
+  type = {submitted for publication},
 }
 
 @unpublished{author:fake-unfinished-paper,
@@ -179,7 +183,7 @@
   title = {Particle Accelerator Physics},
   publisher = {Springer Cham},
   date = {2015-07-28},
-  doi = {https://doi.org/10.1007/978-3-319-18317-6},
+  doi = {10.1007/978-3-319-18317-6},
 }
 
 @techreport{herr:cern-2014-009.157,
